src/objects/Case_Line_Item__c/Case_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>CLI-{0}</displayFormat>
        <label>Case Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>