src/objects/Case_Line_Item__c/fields/Aircraft_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Serial_Number__c</fullName>
    <label>Aircraft Serial Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>