src/objects/Case_Line_Item__c/fields/ATA_Chapter__c.field-meta.xml
<CustomField>
    <fullName>ATA_Chapter__c</fullName>
    <label>ATA Chapter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>