src/objects/Case_Line_Item__c/fields/Cage_Code__c.field-meta.xml
<CustomField>
    <fullName>Cage_Code__c</fullName>
    <description>Cage Code from Web</description>
    <label>Cage Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>