src/objects/Case_Line_Item__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>