src/objects/Case_Line_Item__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Customer Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>