src/objects/Case_Line_Item__c/fields/Drawing_Dimensional_Functional_Requireme__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Dimensional_Functional_Requireme__c</fullName>
    <label>Dwg/Dim/Functional Requirements NOT met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>