src/objects/Case_Line_Item__c/fields/Failure_Description__c.field-meta.xml
<CustomField>
    <fullName>Failure_Description__c</fullName>
    <label>Failure Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>