src/objects/Case_Line_Item__c/fields/Functional_Spec_Paragraph__c.field-meta.xml
<CustomField>
    <fullName>Functional_Spec_Paragraph__c</fullName>
    <label>Functional Spec Paragraph</label>
    <length>50</length>
    <type>Text</type>
</CustomField>