src/objects/Case_Line_Item__c/fields/Honeywell_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Honeywell_Invoice_Number__c</fullName>
    <label>Honeywell Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>