src/objects/Case_Line_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>CSR Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>