src/objects/Case_Line_Item__c/fields/NSN__c.field-meta.xml
<CustomField>
    <fullName>NSN__c</fullName>
    <label>NSN:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>