src/objects/Case_Line_Item__c/fields/Number_of_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Aircraft__c</fullName>
    <label>Number of Aircraft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>