src/objects/Case_Line_Item__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>Part Number  from Web</description>
    <label>Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>