src/objects/Case_Line_Item__c/fields/Product_Description1__c.field-meta.xml
<CustomField>
    <fullName>Product_Description1__c</fullName>
    <formula>Product_Number__r.Description</formula>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>