src/objects/Case_Line_Item__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changing the Label due to the change in the Product table during UAT, where the number was changed to the Name.</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>