src/objects/Case_Line_Item__c/fields/Repair_Location__c.field-meta.xml
<CustomField>
    <fullName>Repair_Location__c</fullName>
    <inlineHelpText>Repair location name, Address, City, State, Country</inlineHelpText>
    <label>Repair Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>