src/objects/Case_Line_Item__c/fields/Sales_Order_number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_number__c</fullName>
    <label>Sales Order number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>