src/objects/Case_Line_Item__c/fields/Serial_Number_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_Shipped__c</fullName>
    <label>Serial Number Shipped</label>
    <length>50</length>
    <type>Text</type>
</CustomField>