src/objects/Case_Line_Item__c/fields/Supplychainhold_Starttime__c.field-meta.xml
<CustomField>
    <fullName>Supplychainhold_Starttime__c</fullName>
    <label>Supplychainhold_Starttime</label>
    <type>DateTime</type>
</CustomField>