src/objects/Case_Line_Item__c/fields/Time_Since_Overhaul__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Overhaul__c</fullName>
    <label>Time Since Overhaul</label>
    <length>50</length>
    <type>Text</type>
</CustomField>