src/objects/Case_Line_Item__c/fields/When_did_the_failure_occur__c.field-meta.xml
<CustomField>
    <fullName>When_did_the_failure_occur__c</fullName>
    <label>When did the failure occur?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>During Power-Up</fullName>
            </value>
            <value>
                <fullName>During Take Off</fullName>
            </value>
            <value>
                <fullName>During Climb</fullName>
            </value>
            <value>
                <fullName>During Cruise</fullName>
            </value>
            <value>
                <fullName>During Descent</fullName>
            </value>
            <value>
                <fullName>During Land</fullName>
            </value>
            <value>
                <fullName>During Go Around</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>