src/objects/Case_Line_Item__c/recordTypes/AOG.recordType-meta.xml
<RecordType>
    <fullName>AOG</fullName>
    <active>true</active>
    <label>AOG</label>
</RecordType>