src/objects/Case_Line_Item__c/recordTypes/ATR_RMU.recordType-meta.xml
<RecordType>
    <fullName>ATR_RMU</fullName>
    <active>true</active>
    <label>ATR RMU</label>
</RecordType>