src/objects/Case_Line_Item__c/recordTypes/AverageHoldTime.recordType-meta.xml
<RecordType>
    <fullName>AverageHoldTime</fullName>
    <active>true</active>
    <label>AverageHoldTime</label>
</RecordType>