src/objects/Case_Line_Item__c/recordTypes/CAAC.recordType-meta.xml
<RecordType>
    <fullName>CAAC</fullName>
    <active>true</active>
    <label>CAAC</label>
</RecordType>