src/objects/Case_Line_Item__c/recordTypes/D_S_Quotes_Orders.recordType-meta.xml
<RecordType>
    <fullName>D_S_Quotes_Orders</fullName>
    <active>true</active>
    <label>D&amp;S Quotes Orders</label>
</RecordType>