src/objects/Case_Line_Item__c/recordTypes/DS_Clearing_House_Proposal.recordType-meta.xml
<RecordType>
    <fullName>DS_Clearing_House_Proposal</fullName>
    <active>true</active>
    <label>DS Clearing House Proposal</label>
</RecordType>