src/objects/Case_Line_Item__c/recordTypes/Invoice_Disputes.recordType-meta.xml
<RecordType>
    <fullName>Invoice_Disputes</fullName>
    <active>true</active>
    <label>Invoice-Disputes</label>
</RecordType>