src/objects/Case_Line_Item__c/recordTypes/Orders.recordType-meta.xml
<RecordType>
    <fullName>Orders</fullName>
    <active>true</active>
    <label>Orders</label>
</RecordType>