src/objects/Case_Line_Item__c/recordTypes/Quotes.recordType-meta.xml
<RecordType>
    <fullName>Quotes</fullName>
    <active>true</active>
    <label>Quotes</label>
</RecordType>