src/objects/Case_Line_Item__c/recordTypes/Repair_Overhaul.recordType-meta.xml
<RecordType>
    <fullName>Repair_Overhaul</fullName>
    <active>true</active>
    <label>Repair &amp; Overhaul</label>
</RecordType>