src/objects/Case_Line_Item__c/recordTypes/Returns.recordType-meta.xml
<RecordType>
    <fullName>Returns</fullName>
    <active>true</active>
    <label>Returns</label>
</RecordType>