src/objects/Case_Line_Item__c/recordTypes/Tech_Pubs.recordType-meta.xml
<RecordType>
    <fullName>Tech_Pubs</fullName>
    <active>true</active>
    <description>INC000008281734</description>
    <label>Tech Pubs</label>
</RecordType>