src/objects/Case_Line_Item__c/recordTypes/Warranty.recordType-meta.xml
<RecordType>
    <fullName>Warranty</fullName>
    <active>true</active>
    <label>Warranty</label>
</RecordType>