src/objects/Case_Line_Item__c/validationRules/Can_not_change_PriceStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_change_PriceStatus</fullName>
    <active>false</active>
    <description>Can not change Price Status after updating the Price.</description>
    <errorConditionFormula>AND(Price__c &gt; 0,$RecordType.DeveloperName ==&apos;Quotes&apos;, $Profile.Name != &apos;Portal API User - RFQ (US)&apos;, ISCHANGED( Price_Status__c ), PRIORVALUE(Price_Status__c ) != null )</errorConditionFormula>
    <errorMessage>Cannot change Price Status.</errorMessage>
</ValidationRule>