src/objects/Case_Line_Item__c/validationRules/Enter_Comments_If_Price_Is_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Comments_If_Price_Is_Blank</fullName>
    <active>true</active>
    <description>Enter_Comments_If_Price_Is_Blank</description>
    <errorConditionFormula>($RecordType.DeveloperName =&apos;Quotes&apos; || $RecordType.DeveloperName =&apos;Orders&apos; || $RecordType.DeveloperName =&apos;Repair_Overhaul&apos; || $RecordType.DeveloperName =&apos;D_S_Quotes_Orders&apos; || $RecordType.DeveloperName =&apos;OEM_Quotes_Orders&apos;)
&amp;&amp; ISBLANK( Price__c ) &amp;&amp; ISBLANK( Comments__c ) &amp;&amp;
$Profile.Name !=&apos;Portal API User - RFQ&apos; &amp;&amp;
$Profile.Name !=&apos;Portal API User - RFQ (US)&apos; &amp;&amp;
$Profile.Name !=&apos;System Administrator&apos; &amp;&amp;
$User.Id!= &apos;005300000042rPL&apos;</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Comments is required if Price is blank</errorMessage>
</ValidationRule>