src/objects/Case_Line_Item__c/validationRules/Enter_Price_Positive_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Price_Positive_Value</fullName>
    <active>true</active>
    <description>Enter_Price_Positive_Value</description>
    <errorConditionFormula>$RecordType.DeveloperName ==&apos;Quotes&apos; &amp;&amp; $Profile.Name != &apos;Portal API User - RFQ (US)&apos; &amp;&amp; (Price__c&lt;0 &amp;&amp; ISBLANK( TEXT(Price_Status__c)))</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Price with Price Status</errorMessage>
</ValidationRule>