src/objects/Case_Line_Item__c/validationRules/Specify_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>Specify_Others</fullName>
    <active>true</active>
    <description>Specify Others</description>
    <errorConditionFormula>$RecordType.DeveloperName ==&apos;D_S_Quotes_Orders&apos; &amp;&amp; text(Application_or_AC_Heli_Type__c)==&apos;Other (Specify)&apos; &amp;&amp; Other__c==null
&amp;&amp; $Profile.Name != &apos;Portal API User - RFQ (US)&apos;</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Specify Other</errorMessage>
</ValidationRule>